--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,1 +1,10 @@
-Index.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Just the index</title>
+</head>
+<body>
+
+</body>
+</html>
